--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main  # or master, depending on your default branch
+    paths:
+      - 'frontend/**'
   workflow_dispatch:
 
 permissions:
