--- a/frontend/content_chooser/package.json
+++ b/frontend/content_chooser/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -13,4 +17,4 @@
   "devDependencies": {
     "parcel": "^2.0.0"
   }
-} 
+}
